--- a/tiny_mrp/mrp/templates/mrp/tolid/partialHeatsetList.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/partialHeatsetList.html
@@ -26,7 +26,7 @@
       <tbody>
         {% for c in machines %}
           {% if c.shift.id == i.id %}
-        <tr data-machine={{c.machine.id}} data-shift="{{i.id}}" data-speed="{{c.amar.speed}}">
+        <tr data-machine={{c.machine.id}} data-shift="{{i.id}}" data-speed="{{c.amar.speed}}" data-id={{c.amar.id}}>
           <td>{{c.machine.assetName}}</td>
           <td contenteditable="true" class="editable-cell btc daf_num selectable1">{{c.amar.daf_num}}</td>
           <td contenteditable="true" class="editable-cell btc dook_weight selectable1">{{c.amar.dook_weight}}</td>
