--- a/tiny_mrp/mrp/templates/mrp/tolid/details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details.html
@@ -24,6 +24,8 @@
                                     </a>
                                     <div class="dropdown-menu">
                                         <a class="dropdown-item add-zayeat" href="#" data-url="{%url 'zayeatVazn_create' %}">ورود ضایعات</a>
+                                        <a class="dropdown-item delete-info" href="#" data-url="{%url 'delete_heatset_info' %}">حذف</a>
+                                        
 
                                     </div>
                                 </li>
@@ -55,7 +57,7 @@
                                     </div>
                                 </div>
                             </form>
-                        
+
                         </div>
                     </div>
                     <div class="card card-body app-content-body">
