--- a/tiny_mrp/mrp/templates/mrp/tolid/heatset_details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/heatset_details.html
@@ -21,6 +21,7 @@
                                     </a>
                                     <div class="dropdown-menu">
                                         <a class="dropdown-item add-zayeat" href="#" data-url="{%url 'zayeatVazn_create' %}">ورود ضایعات</a>
+                                        <a class="dropdown-item delete-info" href="#" data-url="{%url 'delete_heatset_info' %}">حذف</a>
 
                                     </div>
                                 </li>
@@ -92,7 +93,7 @@
                                   </thead>
                                   <tbody>
                                     {% for c in machines %}
-                                    <tr data-machine={{c.machine.id}} data-shift="{{i.id}}" data-speed="{{c.speed}}">
+                                    <tr data-machine={{c.machine.id}} data-shift="{{i.id}}" data-speed="{{c.speed}}" >
                                       <td>{{c.machine.assetName}}</td>
                                       <td contenteditable="true" class="editable-cell btc daf_num selectable1">{{c.nomre}}</td>
                                       <td contenteditable="true" class="editable-cell btc dook_weight selectable1"></td>
