--- a/tiny_mrp/mrp/templates/mrp/baft/daily_baft_record/init.html
+++ b/tiny_mrp/mrp/templates/mrp/baft/daily_baft_record/init.html
@@ -2,97 +2,59 @@
 {% load static %}
 
 {% block stylesheet %}
- <!-- <style>
-  th {
+ <style>
+  .inverc-text {
       writing-mode: vertical-lr;
       transform: rotate(180deg);
       white-space: nowrap;
       text-align: left; /* Align text to the left */
+      
     }
- </style> -->
+ </style> 
    
 
 {% endblock %}
 
 
 {% block content %}
-<div class="row app-block">
-
-                <div class="col-md-12 app-content">
-                    <div></div>
-                    <div class="app-action">
-                        <div class="action-left">
-                            <div class="custom-control custom-checkbox mr-3">
-                                <input type="checkbox" class="custom-control-input" id="customCheckAll">
-                                <label class="custom-control-label" for="customCheckAll"></label>
-                            </div>
-                            <ul class="list-inline">
-                              <li class="list-inline-item mb-0">
-                                <button type="button" name="button" class="btn btn-outline-light  js-create-assetFailure" id="create_new" data-url="{% url 'assetFailure_create'%}">جدید</button>
-                              </li>
-                                <li class="list-inline-item mb-0">
-                                    <a href="#" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
-                                      عملیات
-                                    </a>
-                                    <div class="dropdown-menu">
-                                        <a class="dropdown-item add-zayeat" href="#" data-url="{%url 'zayeatVazn_create' %}">ورود ضایعات</a>
-
-                                    </div>
-                                </li>
-
-                                <li class="list-inline-item mb-0">
-                                    <a href="#" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
-چینش                                     </a>
-                                    <div class="dropdown-menu dropdown-menu-right">
-                                        <a class="dropdown-item" href="#">تاریخ</a>
-                                        <a class="dropdown-item" href="#">از</a>
-                                        <a class="dropdown-item" href="#">موضوغ</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">اندازه</a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="action-right">
-                            <form class="d-flex mr-3">
-                                <a href="#" class="app-sidebar-menu-button btn btn-outline-light">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu width-15 height-15"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
-                                </a>
-                                <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="جستجو ایمیل" aria-describedby="button-addon1" id="search" value="{{greg_today}}">
-                                    <div class="input-group-append">
-                                        <button class="btn btn-outline-light" type="button" id="button-addon1">
-                                            <i class="ti-search"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </form>
-                            <div class="app-pager d-flex align-items-center">
-                                <div class="mr-3"></div>
-                                <nav aria-label="Page navigation example">
-                                    <ul class="pagination">
-                                        <li class="page-item">
-                                            <a class="page-link" href="{% url 'asset_failure_list' %}?date={{prev_date}}" aria-label="Previous">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left width-15 height-15"><polyline points="15 18 9 12 15 6"></polyline></svg>
-                                            </a>
-                                        </li>
-                                        <li class="page-item">
-                                            <a class="page-link" href="{% url 'asset_failure_list' %}?date={{next_date}}" aria-label="Next">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right width-15 height-15"><polyline points="9 18 15 12 9 6"></polyline></svg>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                    </div>
-
-                        <!-- end::app-lists -->
-
-                        <!-- begin:app-detail -->
-
-
+<div class="row">
+  <div class="col-md-12">
+   <div class="card">
+    <div class="card-body">
+      
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-row">
+            <div class="col">
+                <input type="text" class="form-control" placeholder="نام">
             </div>
+            <div class="col">
+                <input type="text" class="form-control" placeholder="نام خانوادگی">
+            </div>
+        </div>
+        <div data-label="کد نمونه" class="demo-code-preview">
+          <div class="form-row">
+            <div class="col">
+                <input type="text" class="form-control" placeholder="">
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" placeholder="نام خانوادگی">
+            </div>
+        </div>
+         
+        </div>
+        </div>
+       </div>
+      
+        
+    
+    </div>
+   </div>
+</div>
+</div>
+<div class="row">
+
+                
             <div class="col-md-12">
               <div class="card card-body app-content-body">
 
@@ -108,9 +70,9 @@
                             </th>
                             <th class="tarh-autocomplete" >طرح</th>
                             <th >رنگ زمینه</th>
-                            <th >تراکم</th>
+                            <th  >تراکم</th>
                           {% for i in sizes %}
-                          <th >
+                          <th  class="inverc-text">
                             {{i.name}}
                           </th>
                           {% endfor %}
@@ -122,9 +84,9 @@
                             <td contenteditable="true"></td>
                             <td contenteditable="true"></td>
                             <td contenteditable="true"></td>
-                            <td contenteditable="true"></td>
+                            <td contenteditable="true" class="numeric-td"></td>
                             {% for i in sizes %}
-                            <td contenteditable="true">
+                            <td contenteditable="true" class="numeric-td text-sm">
                               
                             </td>
                             {% endfor %}
