--- a/tiny_mrp/mrp/templates/mrp/tolid/details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details.html
@@ -24,7 +24,7 @@
                                     </a>
                                     <div class="dropdown-menu">
                                         <a class="dropdown-item add-zayeat" href="#" data-url="{%url 'zayeatVazn_create' %}">ورود ضایعات</a>
-                                        <a class="dropdown-item delete-info" href="#" data-url="{%url 'delete_heatset_info' %}">حذف</a>
+                                        <a class="dropdown-item delete-info" href="#" data-url="{%url 'delete_amar_info' %}">حذف</a>
                                         
 
                                     </div>
