--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -79,6 +79,11 @@
       </a>
     </li>
     <li>
+      <a href="{% url 'backup_databaseلنبتمسصتمقص4ف5هتم3ف5نت3فضنت35ناض35غنا3ناعععف4هاشفغ3ضفضام352غ8ع32تقممخ490ف4ذ5436782920187ث7ققلعتذعاهلخثضضثخثقخفغ698' %}" data-toggle="tooltip" data-placement="right" title="پشتیبان گیری">
+        <i data-feather="settings"></i>
+      </a>
+    </li>
+    <li>
       <a href="{% url 'logout' %}" data-toggle="tooltip" data-placement="right" title="خروج">
         <i data-feather="log-out"></i>
       </a>
