--- a/tiny_mrp/mrp/templates/mrp/tolid/daily_amar_tolid.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/daily_amar_tolid.html
@@ -103,9 +103,9 @@
                         <tr>
                             <td class="{{i.css}}">{{i.machine}}</td>
                             {%for k in i.shift_amar %}
-                            <td class="{{i.css}}">{{k.value}}</td>
+                            <td class="{{i.css}}">{{k.value|floatformat:0}}</td>
                             {% endfor %}
-                            <td class="{{i.css}}">{{i.sum}}</td>
+                            <td class="{{i.css}}">{{i.sum|floatformat:0}}</td>
                             <td class="{{i.css}}">{{i.max_speed}}</td>
                         </tr>
 
