adding multiple asset to asset failure createion
ewq

--- a/tiny_mrp/mrp/templates/mrp/assetfailure/details.html
+++ b/tiny_mrp/mrp/templates/mrp/assetfailure/details.html
@@ -3,6 +3,8 @@
 {% block stylesheet %}
    <!-- Clockpicker -->
    <link rel="stylesheet" href="{% static 'vendors/clockpicker/bootstrap-clockpicker.min.css' %}" type="text/css">
+   <link rel="stylesheet" href="{% static 'vendors/select2/css/select2.min.css' %}" type="text/css">
+
 
 {% endblock %}
 {% block content %}
@@ -140,4 +142,7 @@
 
  <script src="{% static 'project/assetfailure.js' %}"></script>
  <script src="{% static 'vendors/clockpicker/bootstrap-clockpicker.min.js' %}"></script>
+ <!-- Javascript -->
+<script src="{% static 'vendors/select2/js/select2.min.js' %}"></script>
+
 {% endblock %}
