--- a/tiny_mrp/mrp/templates/mrp/assetfailure/partialAssetFailureFormUpdate.html
+++ b/tiny_mrp/mrp/templates/mrp/assetfailure/partialAssetFailureFormUpdate.html
@@ -1,7 +1,7 @@
 {% load widget_tweaks %}
 <div class="mb-3">
     <label>{{form.asset_name.label}}</label>
-    {% render_field form.asset_name  class='form-control select' multiple='' %}
+    {% render_field form.asset_name  class='form-control' %}
   </div>
   <div class="mb-3">
     <label>{{form.failure_name.label}}</label>
