--- a/tiny_mrp/mrp/templates/mrp/assetfailure/partialAssetFailureForm.html
+++ b/tiny_mrp/mrp/templates/mrp/assetfailure/partialAssetFailureForm.html
@@ -21,7 +21,7 @@
   </div>
   <div class="mb-3">
     <label>{{form.shift.label}}</label>
-    {% render_field form.shift  class='form-control' %}
+    {% render_field form.shift  class='form-control select' multiple='' %}
   </div>
   <div class="mb-3">
 
