--- a/tiny_mrp/mrp/templates/mrp/tolid/partialheatsettr2.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/partialheatsettr2.html
@@ -26,5 +26,5 @@
 </tr>
 <tr>
   <td>{{ c.amar.weight4|sub:c.amar.weight3 }}</td>
-  <td>{{c.amar.production_value}}</td>
+  <td class="bg-success">{{c.amar.production_value}}</td>
 </tr>
