--- a/tiny_mrp/mrp/templates/mrp/tolid/heatset_details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/heatset_details.html
@@ -63,12 +63,12 @@
                                 <nav aria-label="Page navigation example">
                                     <ul class="pagination">
                                         <li class="page-item">
-                                            <a class="page-link" href="/Tolid/DailyDetails?event_id=2024-01-27" aria-label="Previous">
+                                            <a class="page-link" href="#" data-url="/Tolid/Heatset/LoadInfo?event={{prev_date}}" id='btn_prev_date' aria-label="Previous">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left width-15 height-15"><polyline points="15 18 9 12 15 6"></polyline></svg>
                                             </a>
                                         </li>
                                         <li class="page-item">
-                                            <a class="page-link" href="/Tolid/DailyDetails?event_id=2024-01-29" aria-label="Next">
+                                            <a class="page-link" href="#" data-url="/Tolid/Heatset/LoadInfo?event={{next_date}}" id='btn_next_date' aria-label="Next">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right width-15 height-15"><polyline points="9 18 15 12 9 6"></polyline></svg>
                                             </a>
                                         </li>
