--- a/tiny_mrp/mrp/templates/mrp/assetfailure/monthly_failure_detailed.html
+++ b/tiny_mrp/mrp/templates/mrp/assetfailure/monthly_failure_detailed.html
@@ -1,4 +1,4 @@
- extends 'mrp/blank-page.html' %}
+{% extends 'mrp/blank-page.html' %}
 
 {% block content %}
 {% load static %}
@@ -12,8 +12,8 @@
                 <div class="custom-control custom-checkbox mr-3">
                     <select class="form-control" id="year">
                         <option >انتخاب سال</option>
-                        <option  value="1402">1402</option>
-                        <option selected value="1403">1403</option>
+                        <option {% if year == 1402 %} selected {% endif %} value="1402">1402</option>
+                        <option {% if year == 1403 %} selected {% endif %} value="1403">1403</option>
 
                       </select>
 
@@ -149,7 +149,7 @@
 <script type="text/javascript">
   $("#button-addon1").click(function(){
     if($("#jalaliMonths").val()>0 && $("#year").val()>0){
-    window.location.href=`/AssetFailure/Monthly/?month=${$("#jalaliMonths").val()}&yea=${$("#year").val()}`;
+    window.location.href=`/AssetFailure/Monthly/?month=${$("#jalaliMonths").val()}&year=${$("#year").val()}`;
   }
   else {
     toastr.error("یک مقدار انتخاب نمایید");
