--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/partialNezafatPadashList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/partialNezafatPadashList.html
@@ -3,8 +3,10 @@
 <tr>
   <td>{{c.description}}</td>
   <td>{{c.rank}}</td>
+  <td>{{c.asset_randeman_list.sal}}</td>
+  <td>{{c.asset_randeman_list.mah}}</td>
   <td>{{c.price_sarshift|floatformat:0|intcomma}}</td>
   <td>{{c.price_personnel|floatformat:0|intcomma}}</td>
-  
+
 </tr>
 {% endfor %}
