--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -155,17 +155,12 @@
         </a>
       </li>
       <li>
-        <a href="{% url 'list_nezafat_padash' %}">
-          <span>پاداش نظافت</span>
+        <a href="{% url 'get_init_asset_randeman' %}">
+          <span>راندمان اولیه هر دستگاه</span>
 
         </a>
       </li>
-      <li>
-        <a href="{% url 'list_tolid_padash' %}">
-          <span>پاداش تولید</span>
-
-        </a>
-      </li>
+      
 
     </ul>
   </div>
