--- a/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
+++ b/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
@@ -42,7 +42,6 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
                     </a>
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="جستجو فایل" aria-describedby="button-addon1">
                         <div class="input-group-append">
                             <button class="btn btn-outline-light" type="button" id="button-addon1">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
@@ -53,6 +52,86 @@
             </div>
         </div>
         <div class="card app-content-body">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between">
+                                <h6 class="card-title">میزان تولید</h6>
+                                <div>
+                                    <a href="#" class="mr-3">
+                                        <i class="fa fa-refresh"></i>
+                                    </a>
+                                    <span class="dropdown">
+                                        <a href="#" data-toggle="dropdown" aria-haspopup="true"
+                                           aria-expanded="false">
+                                            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                        </a>
+                                        <span class="dropdown-menu dropdown-menu-left">
+                                            <a href="#" class="dropdown-item">گزارش</a>
+                                            <a href="#" class="dropdown-item">دانلود</a>
+                                            <a href="#" class="dropdown-item">بستن</a>
+                                        </span>
+                                    </span>
+                                </div>
+                            </div>
+                                 <!-- <canvas id="hot-products"></canvas>
+                                 <div id="hot-products-legends"></div> -->
+            
+            
+            
+                                 <div id="barAssetProductionChartholder">
+            
+                                    <div id="barAssetProductionChart"></div>
+                                 </div>
+                            <!-- <div class="card">
+                                    <canvas id="countries"></canvas>
+                            </div> -->
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between">
+                                <h6 class="card-title">میزان تولید</h6>
+                                <div>
+                                    <a href="#" class="mr-3">
+                                        <i class="fa fa-refresh"></i>
+                                    </a>
+                                    <span class="dropdown">
+                                        <a href="#" data-toggle="dropdown" aria-haspopup="true"
+                                           aria-expanded="false">
+                                            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                        </a>
+                                        <span class="dropdown-menu dropdown-menu-left">
+                                            <a href="#" class="dropdown-item">گزارش</a>
+                                            <a href="#" class="dropdown-item">دانلود</a>
+                                            <a href="#" class="dropdown-item">بستن</a>
+                                        </span>
+                                    </span>
+                                </div>
+                            </div>
+                                 <!-- <canvas id="hot-products"></canvas>
+                                 <div id="hot-products-legends"></div> -->
+            
+            
+            
+                                 <div id="lineAssetProductionChartholder">
+            
+                                    <div id="lineAssetProductionChart"></div>
+                                 </div>
+                            <!-- <div class="card">
+                                    <canvas id="countries"></canvas>
+                            </div> -->
+                        </div>
+                    </div>
+
+                </div>
+            </div>
             <div class="row">
                 <div class="col-md-6">
                     {% comment %} <div class="card">
