--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -118,6 +118,7 @@
       <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید</a></li>
       <li><a href="{% url 'calendar_tahlil' %}">تحلیل تولید روزانه</a></li>
       <li><a href="{% url 'monthly_detaild_report' %}">آمار تولید ماهانه</a></li>
+      <li><a href="{% url 'monthly_brief_report' %}">آمار تولید ماهانه</a></li>
       <li><a href="{% url 'asset_failure_list' %}">ثبت آمار توقف
       <li><a href="{% url 'calendar_asset_failure' %}">آمار توقف
       </a></li>
