--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/assetRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/assetRandemanList.html
@@ -136,4 +136,5 @@
 
  <script src="{% static 'project/assetrandeman.js' %}"></script>
  <script src="{% static 'vendors/clockpicker/bootstrap-clockpicker.min.js' %}"></script>
+ {% comment %} <script src="{% static 'vendors/input-mask/jquery.mask.js' %}"></script> {% endcomment %}
 {% endblock %}
