--- a/tiny_mrp/mrp/templates/mrp/blank-page.html
+++ b/tiny_mrp/mrp/templates/mrp/blank-page.html
@@ -73,16 +73,16 @@
     <!-- begin::footer -->
     <footer>
       <div class="container-fluid">
-        <div>© 1402 |سیستم مدیریت تولید xxx<a href="sarvrayan.ir">سرو رایان</a></div>
+        <div>© 1402 |سیستم مدیریت تولید دیانا <a href="https://sarvrayan.ir">سرو رایان</a></div>
 
-        <div>
+        {% comment %} <div>
           <nav class="nav">
             <a href="https://www.rtl-theme.com/standard/" class="nav-link">لیسانس</a>
             <a href="#" class="nav-link">تغییر لاگ</a>
             <a href="#" class="nav-link">راهنمایی</a>
           </nav>
         </div>
-      </div>
+      </div> {% endcomment %}
     </footer>
     <!-- end::footer -->
 
