--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList.html
@@ -14,18 +14,18 @@
                     {% for i in shift_list %}
                     <div class="row">
                       <div class="col text-center">
-                        <h3>{{i.name}}</h3>
+                        <h3> راندمان اپراتورهای شیفت {{i.name}} </h3>
                       </div>
                       <div class="table-responsive"> <!-- Required for Responsive -->
                         <table class="table table-striped table-bordered" id="company-table">
-                          <thead class="bg-info-gradient">
+                          <thead class="bg-success-gradient">
                             <tr>
 
                               <th>نام دستگاه</th>
                             {% for x in randeman_list %}
                             
                             {% if i.id == x.randeman.shift.id %}
-                            <th>{{x.randeman.asset_category}}</th>
+                            <th><b>{{x.randeman.asset_category}}</b></th>
                             {% endif %}
                             {% endfor %}
 
@@ -45,57 +45,66 @@
                           </thead>
                           <tbody id="tbody_company">
                             <tr>
-                              <td>جمع دستگاه</td>
+                              <td><b>جمع دستگاه</b></td>
                               {% for x in randeman_list %}
                               {% if i.id == x.randeman.shift.id %}
-                              <td>{{x.randeman.tolid_value|floatformat:0|intcomma}}</td>
+                              <td><b>{{x.randeman.tolid_value|floatformat:0|intcomma}}</b></td>
                               {% endif %}
                               {% endfor %}
                             </tr>
                             <tr>
                               <td colspan="4">
-                                جمع کل دستگاهها
+                                <b>جمع راندمان تولید</b>
                               </td>
                               <td colspan="2" class="text-center">
                                 {% for x in randeman_kol %}
                                   {% if i.id == x.shift.id %}
-                                  {{x.randeman_kol|floatformat:0|intcomma}}
+                                 <b> {{x.randeman_kol|floatformat:0|intcomma}}</b>
                                   {% endif %}
                                   {% endfor %}</td>
-                              <td>جمع راندمان نظافت</td>
+                              <td><b>جمع راندمان نظافت</b></td>
                               <td>  {% for x in randeman_kol %}
                                   {% if i.id == x.shift.id %}
-                                  {{x.nezafat_rank}}
+                                 <b> {{x.nezafat_rank}}</b>
                                   {% endif %}
                                   {% endfor %}</td>
                               <td colspan="3" class="text-center">  {% for x in randeman_kol %}
                                   {% if i.id == x.shift.id %}
                                   {{x.padashe_nezafat|floatformat:0|intcomma}}
+                                  <b></b>
                                   {% endif %}
                                   {% endfor %}</td>
 
                             </tr>
                             <tr class="text-center">
-                              <td colspan="2">رتبه شیفت در تولید</td>
+                              <td colspan="2">
+                               <b> رتبه شیفت در تولید</b>
+                                
+                              </td>
                               <td >
                                 {% for x in randeman_kol %}
                                   {% if i.id == x.shift.id %}
-                                  {{x.tolid_rank}}
+                                  
+                                  <b>{{x.tolid_rank}}</b>
                                   {% endif %}
                                   {% endfor %}
                               </td>
                               <td colspan="3">
                                 {% for x in randeman_kol %}
                                 {% if i.id == x.shift.id %}
-                                {{x.padashe_tolid|floatformat:0|intcomma}}
+                                
+                                <b> {{x.padashe_tolid|floatformat:0|intcomma}}  </b>
                                 {% endif %}
                                 {% endfor %}
                               </td>
                               <td colspan="3" >
-                              جمع کل (ریال ) مبلغ قابل پرداخت</td>
+                              
+                              <b>جمع کل (ریال ) مبلغ قابل پرداخت</b>
+                            </td>
                               <td colspan="2"> {% for x in randeman_kol %}
                                 {% if i.id == x.shift.id %}
-                                {{x.sum|floatformat:0|intcomma}}
+                                
+                                <b>{{x.sum|floatformat:0|intcomma}}</b>
                                 {% endif %}
                                 {% endfor %}</td>
                             </tr>
