--- a/tiny_mrp/mrp/templates/mrp/tolid/monthly_brief.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/monthly_brief.html
@@ -4,8 +4,9 @@
 {% load static %}
 {% load custom_filters %}
 <div class="row app-block">
+    <div class="col-md-3"></div>
 
-    <div class="col-md-12 app-content">
+    <div class="col-md-6 app-content">
         <div class="app-content-overlay"></div>
         <div class="app-action">
             <div class="action-left">
@@ -65,7 +66,8 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
 
         <div class="card">
             <div class="card-body">
